# buh

./: .gitignore  AGENTS.md  CMakeLists.txt  PROJECT_STRUCTURE.md  README.md  build.bat  build_run.bat  devlog_snippet.html  devlogs.html  game_description.md  run.bat
data/: characters.json  enemies.json  items.json  meta_progress.json  skill_tree_layout.json  skill_tree_progress.json  weapons.json
data/schema/: characters.schema.json  enemies.schema.json  items.schema.json  weapons.schema.json
include/core/: config.h  game.h  types.h
include/data/: registry.h
include/render/: render.h
include/systems/: enemies.h  skill_tree.h  weapons.h
src/: enemies.c  game.c  game.h  main.c  render.c  weapons.c
src/core/: game.c  main.c
src/data/: registry.c
src/render/: render.c
src/systems/: enemies.c  skill_tree.c  weapons.c
tests/: test_game.c
tools/: report_missing_sprites.ps1  report_missing_sprites.py  validate_data.bat  validate_data.py
